# stp-database

./: .gitignore  LICENSE  MANIFEST.in  README.md  SETUP_GUIDE.md  __init__.py  pyproject.toml
stp_database/: __init__.py  config.py  setup.py
stp_database/models/: __init__.py  base.py
stp_database/models/Gifter/: __init__.py  events.py  user.py  users_events.py
stp_database/models/KPI/: __init__.py  head_premium.py  spec_kpi.py  spec_premium.py
stp_database/models/Questioner/: __init__.py  messages_pair.py  question.py  settings.py
stp_database/models/Questions/: __init__.py  question.py
stp_database/models/Recruitments/: __init__.py  candidates.py
stp_database/models/STP/: __init__.py  achievement.py  broadcast.py  employee.py  event_log.py  exchange.py  file.py  group.py  group_member.py  product.py  purchase.py  schedule.py  schedules.py  transactions.py
stp_database/models/Stats/: __init__.py  head_premium.py  sl.py  spec_kpi.py  spec_premium.py  tests.py  tutors_schedule.py
stp_database/models/Teaching/: result.py
stp_database/repo/: __init__.py  base.py
stp_database/repo/KPI/: __init__.py  head_premium.py  requests.py  spec_day_kpi.py  spec_kpi.py  spec_month_kpi.py  spec_premium.py  spec_week_kpi.py
stp_database/repo/Questions/: __init__.py  pairs.py  questions.py  requests.py  settings.py
stp_database/repo/Recruitments/: __init__.py  candidate.py  requests.py
stp_database/repo/STP/: __init__.py  achievement.py  broadcast.py  employee.py  event_log.py  exchange.py  files.py  group.py  group_member.py  product.py  purchase.py  requests.py  (+2 more)
(+9 files in other folders)
