[project]
name = "stp-database"
version = "0.1.0"
description = "Shared database models and repositories for STP bots"
readme = "README.md"
requires-python = ">=3.13"
authors = [
    {name = "Your Team", email = "your-email@example.com"}
]
dependencies = [
    "sqlalchemy>=2.0.43",
    "aiomysql>=0.2.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["stp_database"]

[tool.uv.workspace]
members = [
    "stp_database",
]
