[project]
name = "stp-database"
version = "0.1.1"
description = "Модели и репозитории для взаимодействия с БД СТП"
readme = "README.md"
requires-python = ">=3.13"
authors = [
    { name = "Roman Chursanov", email = "roman@chrsnv.ru" }
]
dependencies = [
    "sqlalchemy>=2.0.43",
    "aiomysql>=0.2.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["stp_database"]
